--- a/assets/css/override-bootstrap.css
+++ b/assets/css/override-bootstrap.css
@@ -19,11 +19,11 @@
     --bs-btn-bg: var(--primary);
     --bs-btn-border-color: var(--primary);
     --bs-btn-hover-color: #ffffff;
-    --bs-btn-hover-bg: #A89F68;
+    --bs-btn-hover-bg: #a89f68;
     --bs-btn-hover-border-color: var(--secondary);
     --bs-btn-focus-shadow-rgb: 49, 132, 253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #2A3C24;
+    --bs-btn-active-bg: #2a3c24;
     --bs-btn-active-border-color: #2A3C24;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
@@ -84,4 +84,10 @@ h3 {
     width: 100%;
     height: 15vw;
     object-fit: cover;
+}
+
+.sidebar {
+    position: sticky;
+    top: 0;
+    overflow: hidden;
 }
