--- a/assets/css/override-bootstrap.css
+++ b/assets/css/override-bootstrap.css
@@ -65,6 +65,34 @@
     --bs-gradient: none;
 }
 
+.table {
+    --bs-table-bg: transparent; 
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: #343a4;
+    --bs-table-striped-bg: #CAD593;
+    --bs-table-hover-bg: #A89F68; 
+    --bs-table-hover-color: #343a40; 
+}
+
+.table thead {
+    background-color: #2A3C24;
+}
+
+.table thead th {
+    color: #ffffff;
+}
+
+.table tbody tr:nth-child(odd) {
+    background-color: #CAD593;
+    color: #343a40;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: #A89F68;
+    color: #343a40;
+}
+
+
 .nav-pills {
     --bs-nav-pills-border-radius: 0.375rem;
     --bs-nav-pills-link-active-color: #fff;
@@ -96,7 +124,7 @@ h3 {
     font-size: 20px;
 }
 
-label {
+.labelForum {
     font-size: 18px;
     font-weight: bold;
     color:#343a40;
@@ -106,4 +134,38 @@ label {
 textarea {
     height: 15rem;
     resize: none;
+}
+
+.warning {
+    background-color: #f0a86d8b;
+    border: #ef9e5b 1px solid;
+    color:#343a40;
+    font-size: 15px;
+    border-radius: 5px;
+    width: 250px;
+    padding: 5px;
+    margin-top: 3px;
+}
+
+.error {
+    background-color: #f47e678b;
+    border: #bc4943 1px solid;
+    color:#343a40;
+    font-size: 15px;
+    border-radius: 5px;
+    width: 250px;
+    padding: 5px;
+    margin-top: 3px;
+}
+
+.error-login {
+    background-color: #f47e678b;
+    border: #bc4943 1px solid;
+    color:#343a40;
+    font-size: 15px;
+    border-radius: 5px;
+    width: 480px;
+    padding: 10px;
+    margin-bottom: 10px;
+    text-align: center;
 }
