--- a/assets/css/override-bootstrap.css
+++ b/assets/css/override-bootstrap.css
@@ -68,8 +68,8 @@
 .table {
     --bs-table-bg: transparent; 
     --bs-table-accent-bg: transparent;
-    --bs-table-striped-color: #343a4;
-    --bs-table-striped-bg: #CAD593;
+    --bs-table-striped-color: #343a40;
+    --bs-table-striped-bg: #cad593;
     --bs-table-hover-bg: #A89F68; 
     --bs-table-hover-color: #343a40; 
 }
@@ -83,13 +83,39 @@
 }
 
 .table tbody tr:nth-child(odd) {
-    background-color: #CAD593;
+    background-color: rgb(202, 213, 147, 0.6);
     color: #343a40;
 }
 
 .table tbody tr:nth-child(even) {
-    background-color: #A89F68;
+    background-color: rgb(168, 159, 104, 0.6);
     color: #343a40;
+}
+
+.pagination {
+    --bs-pagination-padding-x: 0.75rem;
+    --bs-pagination-padding-y: 0.375rem;
+    --bs-pagination-font-size: 1rem;
+    --bs-pagination-color: var(--bs-link-color);
+    --bs-pagination-bg: var(--bs-body-bg);
+    --bs-pagination-border-width: var(--bs-border-width);
+    --bs-pagination-border-color: var(--bs-border-color);
+    --bs-pagination-border-radius: var(--bs-border-radius);
+    --bs-pagination-hover-color: var(--bs-link-hover-color);
+    --bs-pagination-hover-bg: var(--bs-tertiary-bg);
+    --bs-pagination-hover-border-color: var(--bs-border-color);
+    --bs-pagination-focus-color: var(--bs-link-hover-color);
+    --bs-pagination-focus-bg: var(--bs-secondary-bg);
+    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-pagination-active-color: #fff;
+    --bs-pagination-active-bg: var(--info);
+    --bs-pagination-active-border-color: var(--secondary);
+    --bs-pagination-disabled-color: var(--bs-secondary-color);
+    --bs-pagination-disabled-bg: var(--bs-secondary-bg);
+    --bs-pagination-disabled-border-color: var(--bs-border-color);
+    display: flex;
+    padding-left: 0;
+    list-style: none;
 }
 
 
